2일차 스터디

--- a/my-restful-service/src/main/resources/application.properties
+++ b/my-restful-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-# yml : xml ?? json ??? ???? ? ? ??. __ : __ ??? ??
-# properties : string??? __ = __ ??? ??
 spring.application.name=my-restful-service
 server.port = 8088
 logging.level.org.springframework = debug
+spring.message.basename = messages
