--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.2'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.4'
 }
 
 tasks.named('test') {
