--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.2'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.4'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
 }
 
 tasks.named('test') {
