--- a/my-restful-service/src/main/resources/application.properties
+++ b/my-restful-service/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=my-restful-service
 server.port = 8088
 logging.level.org.springframework = debug
 spring.message.basename = messages
+
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/study?rewriteBatchedStatements=true
+#spring.datasource.username=study
+#spring.datasource.password=aaa111!!!
+spring.datasource.username=root
+spring.datasource.password=selvas1122!
