--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.2'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.4'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
+	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+//	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.2'
 }
 
 tasks.named('test') {
