--- a/my-restful-service/src/main/resources/application.properties
+++ b/my-restful-service/src/main/resources/application.properties
@@ -3,9 +3,20 @@ server.port = 8088
 logging.level.org.springframework = debug
 spring.message.basename = messages
 
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/study?rewriteBatchedStatements=true
-#spring.datasource.username=study
-#spring.datasource.password=aaa111!!!
-spring.datasource.username=root
-spring.datasource.password=selvas1122!
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://localhost:3306/study?rewriteBatchedStatements=true
+##spring.datasource.username=study
+##spring.datasource.password=aaa111!!!
+#spring.datasource.username=root
+#spring.datasource.password=selvas1122!
+
+#spring.security.user.name=username
+#spring.security.user.password=passw0rd
+
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.defer-datasource-initialization=true
