--- a/my-restful-service/src/main/resources/application.properties
+++ b/my-restful-service/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+# hibernate 초기화(script보다 먼저)
 spring.jpa.defer-datasource-initialization=true
