--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.5'
 	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.0.2'
+	implementation 'io.jsonwebtoken:jjwt:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 }
 
 tasks.named('test') {
