--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+	implementation 'org.apache.commons:commons-lang3'
 }
 
 tasks.named('test') {
