--- a/my-restful-service/src/main/resources/application.properties
+++ b/my-restful-service/src/main/resources/application.properties
@@ -5,10 +5,10 @@ spring.message.basename = messages
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/study?rewriteBatchedStatements=true
-#spring.datasource.username=study
-#spring.datasource.password=aaa111!!!
-spring.datasource.username=root
-spring.datasource.password=selvas1122!
+spring.datasource.username=study
+spring.datasource.password=aaa111!!!
+#spring.datasource.username=root
+#spring.datasource.password=selvas1122!
 
 #spring.security.user.name=username
 #spring.security.user.password=passw0rd
