--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -41,8 +41,47 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 	implementation 'org.apache.commons:commons-lang3'
+
+
+//	implementation 'com.querydsl:querydsl-jpa:5.0.0'
+//	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jpa'
+//	implementation 'javax.persistence:javax.persistence-api:2.2'
+//	implementation 'org.hibernate:hibernate-core:5.6.14.Final'
+
+	// 스프링 부트 3.0 이상
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+
+
+	implementation "com.querydsl:querydsl-core"
+	implementation "com.querydsl:querydsl-collections"
+
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 에러 대응 코드
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 에러 대응 코드
+}
+
+compileJava {
+	options.annotationProcessorPath = configurations.annotationProcessor
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+///// Querydsl 빌드 옵션 (옵셔널)
+def generated = 'src/main/generated'
+
+///// querydsl QClass 파일 생성 위치를 지정
+tasks.withType(JavaCompile) {
+	options.getGeneratedSourceOutputDirectory().set(file(generated))
+}
+
+///// java source set 에 querydsl QClass 위치 추가
+sourceSets {
+	main.java.srcDirs += [ generated ]
+}
+
+///// gradle clean 시에 QClass 디렉토리 삭제
+clean {
+	delete file(generated)
 }
