--- a/my-restful-service/build.gradle
+++ b/my-restful-service/build.gradle
@@ -49,18 +49,27 @@ dependencies {
 //	implementation 'org.hibernate:hibernate-core:5.6.14.Final'
 
 	// 스프링 부트 3.0 이상
+//	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+//	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+//
+//
+//	implementation "com.querydsl:querydsl-core"
+//	implementation "com.querydsl:querydsl-collections"
+//
+//	annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 에러 대응 코드
+//	annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 에러 대응 코드
+
+	// QueryDSL 설정
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
-
-
-	implementation "com.querydsl:querydsl-core"
-	implementation "com.querydsl:querydsl-collections"
-
-	annotationProcessor "jakarta.annotation:jakarta.annotation-api" // java.lang.NoClassDefFoundError (javax.annotation.Generated) 에러 대응 코드
-	annotationProcessor "jakarta.persistence:jakarta.persistence-api" // java.lang.NoClassDefFoundError (javax.annotation.Entity) 에러 대응 코드
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 }
 
-compileJava {
+//compileJava {
+//	options.annotationProcessorPath = configurations.annotationProcessor
+//}
+tasks.named('compileJava') {
 	options.annotationProcessorPath = configurations.annotationProcessor
 }
 
@@ -69,11 +78,12 @@ tasks.named('test') {
 }
 
 ///// Querydsl 빌드 옵션 (옵셔널)
-def generated = 'src/main/generated'
+def generated = 'build/src/main/generated'
 
 ///// querydsl QClass 파일 생성 위치를 지정
 tasks.withType(JavaCompile) {
 	options.getGeneratedSourceOutputDirectory().set(file(generated))
+	options.compilerArgs += ["-Aquerydsl.supplementarySources=${generated}"]
 }
 
 ///// java source set 에 querydsl QClass 위치 추가
